# vvclient

./: .gitignore  README.md
trace-error/: Cargo.toml  README.md  todo.txt
trace-error/proc-macro/: Cargo.toml
trace-error/proc-macro/src/: attach_trace.rs  debug.rs  lib.rs  macro_replacer.rs  poc.rs  select.rs  types.rs
trace-error/src/: error.rs  lib.rs
trace-error/src/tests/: mod.rs  poc.rs
trace-error/src/tests/test_macro/: error1.rs  error2.rs  error3.rs  error4.rs  error5.rs  macro_rules.rs  mod.rs  ok.rs  option.rs  poc.rs
vvclient-rs/: Cargo.toml  todo.txt  uniffi.toml
vvclient-rs/src/: async_rt.rs  error.rs  lib.rs  log.rs
vvclient-rs/src/client/: client.rs  defines.rs  mod.rs  worker.rs  xfer.rs
vvclient-rs/src/client/ws_tung/: mod.rs  stream.rs
vvclient-rs/src/glue/: android.rs  client.rs  defines.rs  error.rs  glue.rs  mod.rs
vvclient-rs/src/kit/: astr.rs  async_rt.rs  log.rs  mod.rs  root_span.rs
vvclient-rs/src/kit/actor/: actor.rs  mod.rs
vvclient-rs/src/kit/tls_utils/: certs.rs  embed.rs  mod.rs  verifier.rs
vvclient-rs/src/kit/tls_utils/self_signed_certs/: cert.pem  key.pem
vvclient-rs/src/proto/: error.rs  fmt_writer.rs  mod.rs  v1.rs  v1_ser.rs
vvclient-rs/src/proto/mediasoup/: data_structures.rs  mod.rs  rtp_parameters.rs  scalability_modes.rs
