[package]
name = "vvclient"
edition = "2024"
# edition = "2024"
version = "0.1.0"


[lib]
crate-type = ["lib", "cdylib"]
name = "vvclient"


[build-dependencies]
uniffi = { version = "0.30", features = ["build", "scaffolding-ffi-buffer-fns"] }

[dev-dependencies]
uniffi = { version = "0.30", features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]

[dependencies]
uniffi = { version = "0.30", features = ["scaffolding-ffi-buffer-fns", "cli"] }

log = "0.4.28"
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "chrono"]}
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
time = {version = "0.3.36", features = ["formatting", "macros"]}
chrono = "0.4.38"

tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"
thiserror = "2.0.17"
parking_lot = "0.12.1"
num_cpus = "1.16.0"
rand = "0.8.5"
serde = "1.0.198"
serde_json = "1.0.116"

[target.'cfg(target_os = "android")'.dependencies]
# android_logger = "0.15"
tracing-logcat = "0.1.0"
tracing_android_trace = "0.1.1"
jni = { version = "0.21.1", default-features = false }
