[package]
name = "vvclient"
edition = "2024"
# edition = "2024"
version = "0.1.0"


[lib]
crate-type = ["lib", "cdylib"]
# crate-type = ["cdylib"]
name = "vvclient"


[build-dependencies]
uniffi = { version = "0.30", features = ["build", "scaffolding-ffi-buffer-fns"] }

[dev-dependencies]
uniffi = { version = "0.30", features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]
no-jni-onload = []

[dependencies]
uniffi = { version = "0.30", features = ["scaffolding-ffi-buffer-fns", "cli"] }

log = "0.4.28"
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "chrono"]}
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
time = {version = "0.3.36", features = ["formatting", "macros"]}
chrono = "0.4.38"

tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"
thiserror = "2.0.17"
parking_lot = "0.12.1"
num_cpus = "1.16.0"
rand = "0.8.5"
serde = "1.0.198"
serde_json = "1.0.116"
serde_with = "3.16.0"
async-trait = "0.1.89"
futures = "0.3.31"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
bytes = "1.11.0"
num_enum = "0.7.5"
strum_macros = "0.27.2"
prost = "0.14.1"

rustls = { version = "0.23.35", default-features = false, features = ["ring", "tls12"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.4"


# mediasoup = "0.20.0"
regex = "1.12.2"

# rootcause = "0.9.1"
# stdext = "0.3.3"
# function_name = "0.3.0"

trace-error = {path = "../trace-error"}
paste = "1.0.15"
const_format = "0.2.35"
auto_impl = "1.3.0"

[target.'cfg(target_os = "android")'.dependencies]
# android_logger = "0.15"
tracing-logcat = "0.1.0"
tracing_android_trace = "0.1.1"
jni = { version = "0.21.1", default-features = false }

[profile.release]
# inherits = "release"
opt-level = 'z'     # Optimize for size. "s"/"z"
lto = "fat"         # Enable Link Time Optimization, "thin"/"fat"/true
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = 'symbols'   # Strip symbols from binary, "symbols"/"debuginfo"/true
# debug = false

# # 可选：把 debug info 拆出去
# # split-debuginfo = "packed"

